# screen-grounded-translator

./: .gitignore  Cargo.toml  README.md  app.rc  build.ps1  build.rs  how-to-use-groq-api-with-json-mode.md  repomix-output.xml
.cargo/: config.toml
promptdj-midi/: index.css  index.html  index.tsx  package-lock.json  package.json  vite.config.ts
promptdj-midi/components/: PlayPauseButton.ts  PlayPauseMorphWrapper.tsx  PromptController.ts  PromptDjMidi.ts  ToastMessage.ts  WeightKnob.ts
promptdj-midi/components/react/: LoadingIndicator.css  LoadingIndicator.jsx  PlayPauseMorphType4.jsx  material-switch.css
promptdj-midi/components/react/LoadingIndicator/: cubic.js  featureMapper.js  floatMapping.js  measuredPolygon.js  morph-fixed.js  roundedPolygon.js  utils.js
promptdj-midi/styles/: material-tokens.css
promptdj-midi/utils/: AudioProcessing.ts  LiveMusicHelper.ts  Locales.ts  MidiDispatcher.ts
screen-record/src/: App.css  App.tsx
screen-record/src/components/: Timeline.tsx
screen-record/src/hooks/: useUndoRedo.ts
screen-record/src/lib/: autoZoom.ts  projectManager.ts  videoController.ts  videoExporter.ts  videoRenderer.ts
screen-record/src/types/: video.ts
scripts/: setup-egui-snarl.ps1
src/: api.rs  config.rs  gui.rs  history.rs  icon_gen.rs  main.rs  model_config.rs  overlay.rs  unpack_dlls.rs  updater.rs
src/api/: audio.rs  client.rs  mod.rs  ollama.rs  realtime_audio.rs  text.rs  tts.rs  types.rs  vision.rs
src/api/gemini_live/: manager.rs  mod.rs  types.rs  websocket.rs  worker.rs
src/api/realtime_audio/: capture.rs  mod.rs  model_loader.rs  parakeet.rs  state.rs  transcription.rs  translation.rs  websocket.rs
src/api/tts/: edge_voices.rs  mod.rs  websocket.rs  worker.rs
src/config/: config.rs  config_struct.rs  defaults.rs  io.rs  mod.rs  types.rs
src/config/preset/: block.rs  mod.rs  preset.rs
src/config/preset/defaults/: audio.rs  image.rs  master.rs  mod.rs  text.rs
src/config/types/: enums.rs  hotkey.rs  mod.rs  tts.rs
src/gui/: app.rs  icons.rs  locale.rs  mod.rs  settings_ui.rs  splash.rs  utils.rs
src/gui/app/: init.rs  input_handler.rs  logic.rs  rendering.rs  types.rs  utils.rs
src/gui/settings_ui/: download_manager.rs  footer.rs  global.rs  help_assistant.rs  history.rs  mod.rs  node_graph.rs  preset.rs  sidebar.rs
src/gui/settings_ui/download_manager/: detection.rs  mod.rs  persistence.rs  run.rs  types.rs  ui.rs  utils.rs
src/gui/settings_ui/global/: downloaded_tools.rs  mod.rs  usage_stats.rs
src/gui/settings_ui/node_graph/: body.rs  utils.rs  viewer.rs
src/overlay/: auto_copy_badge.rs  broom_assets.rs  continuous_mode.rs  favorite_bubble.rs  mod.rs  paint_utils.rs  preset_wheel.rs  process.rs  realtime_egui.rs  realtime_html.rs  realtime_overlay.rs  realtime_webview.rs  recording.rs  result.rs  selection.rs  text_input.rs  text_selection.rs  tray_popup.rs  utils.rs
src/overlay/favorite_bubble/: html.rs  panel.rs  window.rs
src/overlay/html_components/: font_manager.rs  grid_js.rs  icons.rs  js_logic.rs  js_main.rs
src/overlay/preset_wheel/: html.rs  mod.rs  window.rs
src/overlay/process/: chain.rs  pipeline.rs
src/overlay/prompt_dj/: mod.rs
src/overlay/realtime_webview/: app_selection.rs  state.rs  webview.rs  wndproc.rs
src/overlay/result/: button_canvas.rs  event_handler.rs  layout.rs  logic.rs  markdown_view.rs  mod.rs  paint.rs  refine_input.rs  state.rs  window.rs
src/overlay/result/event_handler/: click_actions.rs  misc.rs  mod.rs  mouse_input.rs  timer_tasks.rs
src/overlay/screen_record/: audio_engine.rs  engine.rs  mod.rs
