[package]
name = "screen-translator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
image = "0.24"
dirs = "5.0"
lazy_static = "1.4"
textwrap = "0.16" # For smart text balancing

[dependencies.windows]
version = "0.48" # or 0.52, code below uses 0.48 syntax mostly compatible
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dwm", # For blur effects
]