[package]
name = "screen-goated-toolbox"
version = "3.1.0"
edition = "2021"

[build-dependencies]
winres = "0.1"
image = { version = "0.24", default-features = false, features = ["png"] }

[dependencies]
# Network & Serialization
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
self_update = { version = "0.39", features = ["archive-zip", "compression-zip-deflate"] }
zip = "0.6"

# Image Processing (Only PNG feature to save space)
image = { version = "0.24", default-features = false, features = ["png"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# System
dirs = "5.0"
lazy_static = "1.4"
textwrap = "0.16"
open = "5.0"
sys-locale = "0.3"
winreg = "0.50"
auto-launch = "0.5"

# Language Data (Kept as requested)
isolang = { version = "2.0", features = ["serde", "english_names"] }

# GUI & Media
eframe = { version = "0.33", default-features = false, features = ["glow"] }
egui-snarl = { path = "libs/egui-snarl", features = ["serde"] }
tray-icon = "0.19.1"
cpal = "0.15"
hound = "3.5"

# Markdown Rendering
pulldown-cmark = "0.10"
wry = "0.53"
raw-window-handle = "0.6"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Media_Audio",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"