[package]
name = "screen-goated-toolbox"
version = "4.3.1"
edition = "2021"

[build-dependencies]
winres = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }

[dependencies]
# Network & Serialization
ureq = { version = "3.1", features = ["json"] }
tungstenite = { version = "0.28", features = ["native-tls"] }
native-tls = "0.2"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
self_update = { version = "0.42", features = ["archive-zip", "compression-zip-deflate"] }
zip = "7.0"

# Image Processing (Common formats for drag-and-drop)
image = { version = "0.25", default-features = false, features = ["png", "bmp", "jpeg", "gif", "webp", "tiff"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# System
dirs = "6.0"
lazy_static = "1.5"
textwrap = "0.16"
open = "5.3"
sys-locale = "0.3"
winreg = "0.55"
auto-launch = "0.5"
urlencoding = "2.1"

# Language Data (Kept as requested)
isolang = { version = "2.4", features = ["serde", "english_names"] }
whatlang = "0.18"

# GUI & Media
eframe = { version = "0.33", default-features = false, features = ["glow"] }
egui-snarl = { path = "libs/egui-snarl", features = ["serde"] }
tray-icon = "0.21.3"
cpal = "0.17"
hound = "3.5"
wasapi = "0.22"
minimp3 = "0.6"
egui_extras = { version = "0.33", features = ["all_loaders"] }
# Audio file decoding (MP3, FLAC, OGG, WAV, AAC, ALAC)
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "aac", "alac", "pcm"] }

# Markdown Rendering
pulldown-cmark = "0.13"
wry = "0.53.5"
raw-window-handle = "0.6"
windows-core = "0.62"
parakeet-rs = { version = "0.2.7", features = ["directml"] }
ort = { version = "2.0.0-rc.10", features = ["directml", "load-dynamic"] }
ringbuf = "0.4.8"
dark-light = "2.0.0"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Media_Audio",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Accessibility",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"  # Keep minimal debug info for AV trust (don't fully strip)
debug = 1          # Include basic debug info - helps Windows Defender trust the exe
panic = "unwind"
